Little fix for spacing

--- a/style.css
+++ b/style.css
@@ -63,10 +63,6 @@ textarea {
   outline: none;
 }
 
-.entry:after {
-  content: ' ';
-}
-
 .entry-holder .ghost {
   color: #AAA;
 }
